# zi

./: .envrc  .gitignore  .gitmodules  .rustfmt.toml  Cargo.toml  Makefile  justfile  rustc-ice-2024-03-02T02_37_44-2099091.txt  rustc-ice-2024-03-02T02_46_35-2104895.txt  rustc-ice-2024-03-02T02_46_35-2104896.txt  rustc-ice-2024-03-02T02_46_48-2105004.txt  rustc-ice-2024-03-02T02_46_48-2105005.txt  rustc-ice-2024-03-02T02_46_51-2105060.txt  rustc-ice-2024-03-02T02_48_36-2106481.txt
fuzz/: Cargo.toml
fuzz/fuzz_targets/: zi.rs
plugins/example/: Cargo.toml
plugins/example/src/: bindings.rs  lib.rs
plugins/p1/: Cargo.toml
plugins/p1/src/: bindings.rs  lib.rs
zi/: Cargo.toml
zi-core/: Cargo.toml
zi-core/src/: completion.rs  diagnostic.rs  lib.rs  position.rs  style.rs
zi-core/src/position/: tests.rs  tree_sitter_impls.rs
zi-editor/: Cargo.toml
zi-editor/src/: buffer.rs  command.rs  editor.rs  event.rs  lib.rs  location.rs  syntax.rs
zi-editor/src/buffer/: explorer.rs  inspector.rs  mark.rs  picker.rs  text.rs
zi-editor/src/editor/: cursor.rs  default_keymap.rs  diagnostics.rs  events.rs  lsp_requests.rs  marks.rs  pickers.rs  render.rs
zi-editor/src/editor/events/: lsp.rs
zi-editor/src/event/: events.rs  handler.rs
zi-editor/src/keymap/: tests.rs
zi-editor/src/syntax/: tests.rs
zi-editor/tests/regression/: main.rs
zi-editor/tests/regression/fuzz/: minimized-from-ba7d5a920ec770df371b3e64505ead9f229bf5f1
zi-editor/tests/zi/: main.rs
zi-editor/tests/zi/api/: config.rs  edit.rs  picker.rs  scroll.rs  search.rs  tab.rs
zi-editor/tests/zi/render/: file_picker.rs  insert.rs  line_number.rs
zi-editor/wit/: zi.wit
zi-input/: Cargo.toml
zi-input/src/: lib.rs
zi-input/tests/: main.rs
zi-lsp/: Cargo.toml
zi-lsp/src/: bindings.rs  client.rs  from_proto.rs  lib.rs  server.rs  to_proto.rs
zi-lsp/tests/it/: diagnostics.rs  format.rs  main.rs  sync.rs
zi-lsp/tests/zi-lsp/: definition.rs  diagnostics.rs  main.rs  sync.rs
zi-marktree/: Cargo.toml
zi-marktree/benches/: marktree.rs
zi-marktree/src/: bitbag.rs  bitmap.rs  builder.rs  lib.rs
zi-marktree/tests/it/: main.rs
zi-marktree/tests/proptest-regressions/: main.txt
zi-marktree/tests/zi-marktree/: main.rs
zi-nvim/: Cargo.toml  init.vim
zi-nvim/src/: lib.rs
zi-term/: Cargo.toml  test.txt
zi-term/src/: bindings.rs  event.rs  lib.rs  main.rs
zi-term/tests/integration/: main.rs
zi-term/tests/integration/snapshots/: empty.ansi  go.ansi  multiline-highlight-2.ansi  multiline-highlight.ansi  numbers.ansi  rust.ansi  scroll-go.ansi  scroll-rust-minimal.ansi  scroll-text.ansi
zi-term/tests/integration/testdata/: main.go  main.rs  multiline-highlight.rs
zi-term/tests/zi-term/: README.md  main.rs
zi-term/tests/zi-term/asciicasts/: buffer-search.cast  empty.cast  go.cast  multiline-highlight-2.ansi  multiline-highlight-2.cast  multiline-highlight.cast  numbers.cast  rust.cast  scroll-go.cast  scroll-rust-minimal.cast  scroll-text.ansi  scroll-text.cast
zi-term/tests/zi-term/snapshots/: buffer-search.ansi  empty.ansi  go.ansi  go.asciicast  multiline-highlight-2.ansi  multiline-highlight-2.asciicast  multiline-highlight.ansi  multiline-highlight.asciicast  numbers.ansi  numbers.asciicast  rust.ansi  scroll-go.ansi  scroll-rust-minimal.ansi  scroll-text.ansi  scroll-text.asciicast
zi-term/tests/zi-term/testdata/: multiline-highlight-2.rs
zi-test/: Cargo.toml
zi-test/src/: lib.rs
zi-text/: Cargo.toml
zi-text/benches/: marktree.rs
zi-text/proptest-regressions/: cursor.txt  tests.txt
zi-text/src/: cow_str_impl.rs  cursor.rs  delta.rs  ext.rs  lib.rs  mark.rs  readonly.rs  rope.rs  str_impl.rs  tests.rs
zi-text/src/mark/: marktree.rs
zi-text/tests/it/: main.rs  mark.rs  marktree.rs
zi-text/tests/zi-text/: main.rs
zi-wasm/: Cargo.toml
zi-wasm/src/: lib.rs  plugin.rs  syntax.rs  wit_conversion_impls.rs
zi-wasm/wit/: zi.wit
zi/proptest-regressions/buffer/: tests.txt
zi/proptest-regressions/text/: tests.txt
zi/src/: boring_impls.rs  buffer.rs  command.rs  completion.rs  component.rs  config.rs  dirs.rs  editor.rs  event.rs  input.rs  jump.rs  keymap.rs  language.rs  language_service.rs  layout.rs  lib.rs  lsp.rs  motion.rs  namespace.rs  object.rs  plugin.rs  position.rs  private.rs  symbol.rs  syntax.rs  text.rs  textobject.rs  undo.rs  view.rs
zi/src/buffer/: change.rs  delta.rs  explorer.rs  inspector.rs  mark.rs  marks.rs  picker.rs  readonly.rs  tests.rs  text.rs  virtual_text.rs
zi/src/buffer/mark/: marktree.rs  tests.rs
zi/src/command/: tests.rs
zi/src/editor/: api.rs  completion.rs  config.rs  cursor.rs  default_keymap.rs  diagnostics.rs  dot.rs  errors.rs  events.rs  keymap.rs  lsp_requests.rs  marks.rs  pickers.rs  register.rs  render.rs  search.rs  settings.rs  state.rs  visual.rs
zi/src/editor/api/: cursor.rs
zi/src/editor/events/: lsp.rs
zi/src/event/: events.rs  handler.rs
zi/src/input/: tests.rs
zi/src/keymap/: macros.rs  tests.rs
zi/src/language_service/: lstypes.rs
zi/src/layout/: tests.rs
zi/src/lsp/: from_proto.rs  proto.rs  to_proto.rs
zi/src/motion/: tests.rs
zi/src/position/: tests.rs
zi/src/syntax/: highlight.rs  tests.rs
zi/src/text/: cow_str_impl.rs  delta.rs  readonly.rs  rope.rs  rope_slice.rs  str_impl.rs  tests.rs
zi/src/textobject/: motion.rs  tests.rs
zi/src/undo/: tests.rs
zi/tests/integration/: api.rs  keymap.rs  main.rs  render.rs
zi/tests/integration/api/: cursor.rs  edit.rs  insert.rs  open.rs  picker.rs  scroll.rs  view.rs
zi/tests/integration/perf/: readonly.rs
zi/tests/integration/render/: split.rs  view.rs
zi/tests/nvim/: README.md  main.rs
zi/tests/nvim-prop/: README.md  main.rs
zi/tests/nvim/testdata/: w  word  word.test
zi/tests/proptest-regressions/: main.txt
zi/tests/regression/: README.md  main.rs
zi/tests/regression/fuzz/: minimized-from-b6b4ab8987c8e470e49694792d148facfa5af7e2
zi/tests/zi/: api.rs  keymap.rs  lsp.rs  main.rs  nvim.rs  render.rs
zi/tests/zi/api/: command.rs  completion.rs  config.rs  cursor.rs  dot.rs  edit.rs  tab.rs  (+10 more)
zi/wit/: zi.wit
(+69 files in other folders)
