[workspace]
resolver = "2"
members = [
    "fuzz",
    "plugins/*",
    "stdx",
    "zi",
    "zi-term",
    "zi-tui",
    "zi-lsp",
    "zi-nvim",
    "zi-text",
    "zi-textobject",
    "zi-core",
]

[workspace.dependencies]
zi = { path = "zi" }
zi-core = { path = "zi-core" }
zi-lsp = { path = "zi-lsp" }
zi-text = { path = "zi-text" }
zi-textobject = { path = "zi-textobject" }
zi-tui = { path = "zi-tui" }
bitflags = "2.5.0"
crop = { version = "0.4.2", features = ["graphemes"] }
stdx = { path = "stdx" }
arbitrary = { version = "1.3.2", features = ["derive"] }
lsp-types = "0.95.0"
anyhow = "1.0.81"
async-trait = "0.1.80"
crossterm = "0.27.0"
expect-test = "1.4.1"
proptest = "1.4.0"
futures-core = "0.3.30"
futures-executor = "0.3.30"
futures-util = "0.3.30"
parking_lot = "0.12.2"
rustc-hash = "1.1.0"
tokio = { version = "1.37.0", default-features = false }
tokio-util = { version = "0.7.10", default-features = false }
tree-sitter = { version = "0.22.5" }
tracing = "0.1.40"
wit-bindgen = "0.24.0"
wit-bindgen-rt = "0.24.0"

[profile.dev.package.cranelift-codegen]
opt-level = 3

[profile.dev.package."*"]
opt-level = 1

[workspace.lints.rust]
rust_2018_idioms = "deny"

[workspace.lints.clippy]
dbg_macro = "deny"

[patch.crates-io]
# https://github.com/ratatui-org/ratatui/pull/1001
ratatui = { git = "https://github.com/andyyu2004/ratatui", branch = "zero-width-grapheme-span-panic-fix" }
# https://github.com/nomad/crop/pull/17 merged but not released
crop = { git = "https://github.com/nomad/crop", branch = "main" }
