[package]
name = "zi-fuzz"
version = "0.0.0"
publish = false
edition = "2021"

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
futures-util = { workspace = true }
futures-executor = { workspace = true }
zi = { workspace = true, features = ["arbitrary"] }
zi-input = { workspace = true }
tui = { path = "../zi-tui", package = "zi-tui" }
tokio = { workspace = true, default-features = false, features = ["rt-multi-thread"] }

[[bin]]
name = "zi-fuzz"
path = "fuzz_targets/zi.rs"
test = false
doc = false
bench = false

