[package]
name = "zi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
stdx = { path = "../stdx" }
tui = { path = "../zi-tui", package = "zi-tui" }
tree-sitter = { workspace = true, optional = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }

[dev-dependencies]
expect-test = { workspace = true }

[lints]
workspace = true
