[package]
name = "zi-core"
version = "0.1.0"
edition = "2021"

[dependencies]
tui = { path = "../zi-tui", package = "zi-tui" }
stdx = { workspace = true }
tree-sitter = { workspace = true, optional = true }
anyhow = { workspace = true }
arbitrary = { workspace = true, optional = true }
parking_lot = { workspace = true }

[dev-dependencies]
expect-test = { workspace = true }

[lints]
workspace = true
