[package]
name = "zi-input"
version = "0.1.0"
edition = "2024"

[dependencies]
bitflags = { workspace = true }
chumsky.workspace = true
crossterm = { workspace = true, optional = true }
arbitrary = { workspace = true, optional = true, features = ["derive"] }
serde = { version = "1.0.228", features = ["derive"], optional = true }

[lints]
workspace = true

[features]
serde = ["dep:serde"]
arbitrary = ["dep:arbitrary", "bitflags/arbitrary"]
