[package]
name = "zi-lsp"
version = "0.1.0"
edition = "2021"

[dependencies]
async-lsp = "0.2.0"
async-process = "2.1.0"
anyhow = { workspace = true }
futures-util = { workspace = true }
tokio = { workspace = true, features = ["io-util"] }
tokio-util = { workspace = true, features = ["compat"] }
tracing = { workspace = true }
zi-event = { workspace = true }
zi = { workspace = true, features = ["rand"] }
tower = "0.4.13"

[dev-dependencies]
zi-test = { workspace = true }
serde_json.workspace = true
rand.workspace = true
stdx.workspace = true

[lints]
workspace = true
