[package]
name = "zi-marktree"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
crop = { workspace = true }
roaring = { workspace = true }
smallvec = { workspace = true }
stdx = { workspace = true }
tinyset = { version = "0.4.15", default-features = false }

[dev-dependencies]
divan = { workspace = true }
mimalloc = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "marktree"
harness = false

