[package]
name = "zi-marktree"
version = "0.1.0"
edition = "2021"

[dependencies]
arrayvec = { workspace = true }
bitflags = { workspace = true }
crop = { workspace = true }
smallvec = { workspace = true }
stdx = { workspace = true }
rustc-hash = { workspace = true }
measureme = { workspace = true }
hashbag = "0.1.12"
tinyset = { version = "0.4.15", default-features = false }
roaring = { version = "0.10.5", features = ["simd"] }

[dev-dependencies]
divan = { workspace = true }
mimalloc = { workspace = true }
proptest = { workspace = true }

[lints]
workspace = true

[[bench]]
name = "marktree"
harness = false

