[package]
name = "zi-nvim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
nvim-rs = { version = "0.7.0", features = ["use_tokio"] }
zi = { path = "../zi" }
tokio = { version = "1", features = ["process"], default-features = false }
async-trait = "0.1"

[lints]
workspace = true
