[package]
name = "zi-nvim"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.81"
nvim-rs = { version = "0.7.0", features = ["use_tokio"] }
zi = { workspace = true }
tokio = { workspace = true, features = ["process"], default-features = false }
async-trait = { workspace = true }
bitflags = { workspace = true }

[lints]
workspace = true
