[package]
name = "zi-term"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.79"
clap = { version = "4.5.1", features = ["derive"] }
crossterm = { version = "0.27.0", features = ["event-stream"] }
futures-util = "0.3.30"
# ratatui = "0.26.1"
tokio = { version = "1.36.0", default-features = false, features = ["rt-multi-thread", "macros"] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zi = { path = "../zi" }
zi-tui = { path = "../zi-tui" }
