[package]
name = "zi-term"
version = "0.1.0"
edition = "2021"
default-run = "zi"

[lib]
name = "zi_term"
path = "src/lib.rs"

[[bin]]
name = "zi"
path = "src/main.rs"

[lints]
workspace = true

[dependencies]
anyhow = { workspace = true }
clap = { version = "4.5.1", features = ["derive"] }
crossterm = { workspace = true, features = ["event-stream"] }
futures-util = { workspace = true }
tokio = { workspace = true, default-features = false, features = [
    "rt-multi-thread",
    "macros",
] }
tracing = { workspace = true }
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
zi = { workspace = true, features = ["crossterm"] }
tui = { path = "../zi-tui", package = "zi-tui" }

[dev-dependencies]
