[package]
name = "zi-wasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
parking_lot = { workspace = true }
zi = { workspace = true }
zi-lsp = { workspace = true }
slotmap = { workspace = true }
mutants = { workspace = true }
smol_str = { workspace = true }
futures-util = { workspace = true }
tree-sitter = { workspace = true, features = ["wasm"] }
# The version of wasmtime must match dependency that tree-sitter takes on wasmtie
wasmtime = { version = "43", features = ["component-model", "component-model-async"] }
streaming-iterator = { workspace = true }
tokio = { workspace = true, features = ["sync", "io-std"] }
tokio-stream = { workspace = true, features = ["fs"] }

[lints]
workspace = true
