[package]
name = "zi"
version = "0.1.0"
edition = "2021"

[dependencies]
zi-editor = { workspace = true }
wasmtime = { workspace = true }
tracing = { workspace = true }

[lints]
workspace = true

[features]
arbitrary = ["zi-editor/arbitrary"]
rand = ["zi-editor/rand"]
crossterm = ["zi-editor/crossterm"]
